--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
       <input type="reset" value="Reset Text">
     </fieldset>
   </form>
+  
+  <br></br>
 
   <div class="svg-container" aria-label="Green-stroked black circle">
     <svg width="50" height="50">
@@ -131,7 +133,7 @@
         super();
         const shadowRoot = this.attachShadow({ mode: "open" });
         shadowRoot.innerHTML = `
-          <a href="https://oracle.com" id="link-id" title="oracle-title">Nested-Root-element-Oracle</a>
+          <a href="https://oracle.com" target="_blank" id="link-id" title="oracle-title">NestedRoot</a>
         `;
       }
     }
@@ -198,6 +200,17 @@
               <input type="reset" value="Reset Text">
             </fieldset>
           </form>
+
+          <br></br>
+
+          <div class="svg-container" aria-label="Green-stroked black circle">
+            <svg width="50" height="50">
+              <circle cx="20" cy="20" r="20" stroke="green" stroke-width="2" fill="black" />
+            </svg>
+          </div>
+
+          <img src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp" width="32" height="32">
+
 
           <h4>Duplicate locators</h4>
           <h4>Duplicate locators</h4>
