--- a/index.html
+++ b/index.html
@@ -56,19 +56,24 @@
   <h1 id="idhd1" title="titleHeader">DOM Header (Lite elements)
     <button id="buttonID" title="buttonTitle">DOM Button Text</button>
   </h1>
+
+  <br></br>
+  
   <a href="https://oracle.com" target="_blank" id="link-id" title="oracle-title">Oracle</a>
 
   <p id="DOM-text-id" title="DOM-Text-title">This is some text inside the main DOM.</p>
   <div id="DivDOM-text-id" title="DivDOM-Text-title">DOM div</div>
 
-  <ul>
-    <li>Coffee</li>
-    <li>Tea</li>
+
+  <ul class="listItems" aria-label="List example">
+    <li>List1</li>
+    <li>List2</li>
+    <li>List3</li>
   </ul>
 
   <form id="idbox" title="titlebox">
     <fieldset>
-      <legend>Roles</legend>
+      <legend>Role</legend>
       <label for="Dev-id">
         <input type="checkbox" id="Dev-id" checked>Dev
       </label>
@@ -120,7 +125,7 @@
     </svg>
   </div>
 
-  <img src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp" width="32" height="32">
+  <img id="image-id" src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp" width="32" height="32">
 
   <h4>Duplicate locators</h4>
   <h4>Duplicate locators</h4>
@@ -147,9 +152,10 @@
             <button id="button-ID" title="button-Title">SDOM Button Text</button>
           </h1>
 
-          <ul>
-            <li>Coffee</li>
-            <li>Tea</li>
+          <ul class="listItems" aria-label="List example">
+            <li>List1</li>
+            <li>List2</li>
+            <li>List3</li>
           </ul>
 
           <p id="SDOM-text-id" title="SDOM-Text-title">This is some text inside SDOM.</p>
@@ -157,7 +163,7 @@
 
           <form id="idbox" title="titlebox">
             <fieldset>
-              <legend>Roles</legend>
+              <legend>Role</legend>
               <label for="Dev-id">
                 <input type="checkbox" id="Dev-id" checked>Dev
               </label>
@@ -209,7 +215,7 @@
             </svg>
           </div>
 
-          <img src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp" width="32" height="32">
+          <img id="image-id" src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp" width="32" height="32">
 
 
           <h4>Duplicate locators</h4>
