--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
     </svg>
   </div>
 
-  <img id="image-id" src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp" width="32" height="32">
+  <div>
+    <img class="lamp" src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp" width="32" height="32">
+  </div>
 
   <h4>Duplicate locators</h4>
   <h4>Duplicate locators</h4>
@@ -215,8 +217,9 @@
             </svg>
           </div>
 
-          <img id="image-id" src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp" width="32" height="32">
-
+          <div>
+           <img class="lamp" src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp" width="32" height="32">
+          </div>
 
           <h4>Duplicate locators</h4>
           <h4>Duplicate locators</h4>
